# cuddly-couscous

./: .gitignore  Cargo.toml  README.md  requirements.txt  setup.py
docs/: EXAMPLES.md  QUICKSTART.md  WIKI.md
keystroke_tracker/: __init__.py  analyzer.py  cli.py  daemon.py  detector.py  tracker.py
keystroke_tracker/utils/: __init__.py  finger_map.py  patterns.py  timing.py
keystroke_tracker/visualizers/: heatmap.py
keystroke_tracker/voyager/: __init__.py  exporter.py  optimizer.py  simulator.py
src/: lib.rs  main.rs
src/capture/: event_tap.rs  keymap.rs  mod.rs  window.rs
src/cli/: mod.rs
src/config/: mod.rs
src/daemon/: ipc.rs  lock.rs  mod.rs
src/query/: mod.rs
src/stats/: milestones.rs  mod.rs
src/storage/: mod.rs
src/tokenize/: mod.rs
src/viz/: mod.rs
