[package]
name = "kstrk"
version = "0.1.0"
edition = "2021"
description = "Minimalist keystroke tracker for macOS"
license = "MIT"
repository = "https://github.com/hunarjain09/cuddly-couscous"

[dependencies]
# macOS event capture
core-foundation = "0.10"
core-graphics = "0.24"

# CLI
clap = { version = "4", features = ["derive"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
toml = "0.8"
directories = "5"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Daemon & IPC
daemonize = "0.5"
ctrlc = "3.4"
libc = "0.2"
fs2 = "0.4"

# Encryption (for keystroke data)
aes-gcm = "0.10"
argon2 = "0.5"

# Async (optional, for watch mode)
tokio = { version = "1", features = ["rt", "sync", "macros", "time"], optional = true }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[features]
default = []
async-watch = ["tokio"]

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.test]
opt-level = 0
